created initial html template

--- a/src/index.html
+++ b/src/index.html
@@ -5,5 +5,10 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   </head>
-  <body></body>
+  <body>
+    <p>scroll down and drag to place ships!</p>
+    <header><h1>Battleship</h1></header>
+    <main>
+    </main>
+  </body>
 </html>
