styled code with prettier

--- a/src/index.html
+++ b/src/index.html
@@ -8,7 +8,6 @@
   <body>
     <p>scroll down and drag to place ships!</p>
     <header><h1>Battleship</h1></header>
-    <main>
-    </main>
+    <main></main>
   </body>
 </html>
